@@ -1,5 +1,11 @@
 2003-01-06  Jaka Mocnik  <jaka@gnu.org>
 
+	* applied a patch from frederic crozat that makes ghex use
+	libgnomeprintui 2.2 instead of 2.0.
+	* configure.in: bumped version to 2.2.0; tagged as GHEX_2_2_0.
+
+2003-01-06  Jaka Mocnik  <jaka@gnu.org>
+
 	* src/ui.c (close_cb): fixed a possible crash.
 	* src/gtkhex.c: enabled pasting of primary selection with
 	middle mouse button. move cursor properly after cutting or
